RE #81: - Added popover example with scrollable container - Fixed z-index of screen page header - Set popover header to white

--- a/demo/src/assets/styles/_variables.scss
+++ b/demo/src/assets/styles/_variables.scss
@@ -283,7 +283,7 @@ $tooltip-arrow-height:        5px;
 // Popovers
 
 $popover-box-shadow:                  0 10px 8px -6px rgba(0,0,0,0.1);
-$popover-header-bg:                   $gray-200;
+$popover-header-bg:                   $white;
 $popover-header-padding-x:            .875rem;
 $popover-body-padding-y:              9px;
 $popover-body-padding-x:              $popover-header-padding-x;
