--- a/src/components/popover/styles.scss
+++ b/src/components/popover/styles.scss
@@ -3,11 +3,13 @@
 @import "~bootstrap/scss/mixins";
 @import "~bootstrap/scss/popover";
 
+$popover-header-bg:   $white;
+
 .popover {
   box-shadow: $popover-box-shadow;
 }
 
 .bs-popover-bottom .arrow::after,
 .bs-popover-auto[x-placement^="bottom"] .arrow::after {
-  border-bottom-color: $popover-header-bg;
+  border-bottom-color: $white;
 }
